k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresser
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/scheme: internet-facing
    nginx.ingress.kubernetes.io/target-type: ip
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: afb9087ecd6d342caba7058c0a3cc2cb-1654424288.eu-central-1.elb.amazonaws.com
    http:
      paths:
      - path: /weather
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 9090
      - path: /solitaire
        pathType: Prefix
        backend:
          service:
            name: sol-service
            port:
              number: 80
